--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <nav>
   <div class="flex-container">
     <ul>
-      <li class="logo"><a href="https://127.0.0.1:5500/index_1.html"><img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
-      <li><a href="https://127.0.0.1:5500/about.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer"></span>About</a></li>
-      <li><a href="https://127.0.0.1:5500/products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved"></span>Products</a></li>
-      <li><a href="http://127.0.0.1:5500/contact.html"><span aria-hidden="true" class="fa-solid fa-phone"></span>Contact</a></li>
+      <li class="logo"><a href="/workspaces/module10grc/index.html"><img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
+      <li><a href="/workspaces/module10grc/about.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer"></span>About</a></li>
+      <li><a href="/workspaces/module10grc/products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved"></span>Products</a></li>
+      <li><a href="/workspaces/module10grc/contact.html"><span aria-hidden="true" class="fa-solid fa-phone"></span>Contact</a></li>
     </ul>
   </nav>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +32,7 @@
     
     <picture>
         <a href="https://uxuicurriculum.wixsite.com/gulproast">
-          <img src="images/gulp-pouring-coffee-horizontal.jpg" alt="Making pour-over coffee at our shop." class="responsive-image">
+          <img src="gulp-pouring-coffee-horizontal.jpg" alt="Making pour-over coffee at our shop." class="responsive-image">
         </a>
     </picture>
 
@@ -46,19 +46,19 @@
     <li class="footer-img">
       <a href="https://facebook.com" target="_blank">
         <span aria-hidden="true" class="fa-brands fa-facebook"></span>
-        <span class="sr-only"><img src="images/facebook_icon.png"></span>
+        <span class="sr-only"><img src="facebook_icon.png"></span>
       </a>
     </li>
     <li class="footer-img">
       <a href="https://twitter.com" target="_blank">
         <span aria-hidden="true" class="fa-brands fa-twitter"></span>
-        <span class="sr-only"><img src="images/twitter_icon.png"></span>
+        <span class="sr-only"><img src="twitter_icon.png"></span>
       </a>
     </li>
     <li class="footer-img">
       <a href="https://instagram.com" target="_blank">
         <span aria-hidden="true" class="fa-brands fa-instagram"></span>
-        <span class="sr-only"><img src="images/instagram_icon.png"></span>
+        <span class="sr-only"><img src="instagram_icon.png"></span>
       </a>
     </li>
   </ul>
