--- a/products.html
+++ b/products.html
@@ -11,10 +11,10 @@
 <nav>
   <div class="flex-container">
     <ul>
-      <li class="logo"><a href="https://127.0.0.1:5500/index_1.html"><img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
-      <li><a href="https://127.0.0.1:5500/about.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer"></span>About</a></li>
-      <li><a href="https://127.0.0.1:5500/products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved"></span>Products</a></li>
-      <li><a href="http://127.0.0.1:5500/contact.html"><span aria-hidden="true" class="fa-solid fa-phone"></span>Contact</a></li>
+      <li class="logo"><a href="/workspaces/module10grc/index.html"><img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
+      <li><a href="/workspaces/module10grc/about.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer"></span>About</a></li>
+      <li><a href="/workspaces/module10grc/products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved"></span>Products</a></li>
+      <li><a href="/workspaces/module10grc/contact.html"><span aria-hidden="true" class="fa-solid fa-phone"></span>Contact</a></li>
     </ul>
   </nav>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,13 +23,13 @@
   <section class="main-products">
       <h1>Our Products</h1>
         <div class="grid-container">
-        <div class="grid-img"><a href="https://uxuicurriculum.wixsite.com/gulproast"></a><img src="images/gulp-espresso.jpg" alt="Pouring espresso."></a></div>
+        <div class="grid-img"><a href="https://uxuicurriculum.wixsite.com/gulproast"></a><img src="gulp-espresso.jpg" alt="Pouring espresso."></a></div>
         <div class="grid-item"><h2>Columbian-Blended Espresso Beans</h2>
             <p>With our Columbian-Blended Espresso Beans, you can finally feel like a professional barista. Bright and clean with an intense burst of flavor, these full-bodied beans strike a perfect balance between the most delicate roasts and fruitful aromas.</p></div>
-        <div class="grid-img"><a href="https://uxuicurriculum.wixsite.com/gulproast"><img src="images/gulp-coffee-beans.jpg" alt="Coffee beans."></a></div>
+        <div class="grid-img"><a href="https://uxuicurriculum.wixsite.com/gulproast"><img src="gulp-coffee-beans.jpg" alt="Coffee beans."></a></div>
         <div class="grid-item"><h2>Triple-Blended Coffee Beans</h2>
             <p>Skillfully roasted and carefully blended, our Triple-Blended Coffee Beans don’t just wake you up in the morning, they pack a lasting punch that's sure to leave you wanting more. With silky smoothness and layered flavors, there’s really no better way to start your day.</p></div>
-        <div class="grid-item"><a href="https://uxuicurriculum.wixsite.com/gulproast"></a><img src="images/gulp-pouring-coffee-horizontal.jpg" alt="Woman with pour-over coffee."></a></div>
+        <div class="grid-item"><a href="https://uxuicurriculum.wixsite.com/gulproast"></a><img src="gulp-pouring-coffee-horizontal.jpg" alt="Woman with pour-over coffee."></a></div>
         <div class="grid-img"><h2>Lightly Roasted Coffee Beans</h2>
             <p>Our Lightly Roasted Coffee Beans offer the world a chance to brighten every day with a whole lot of flavor and inspiration. Try these to receive the perfect balance between bold flavor and subtle sweetness.</p></div>
     </div>
@@ -42,19 +42,19 @@
     <li class="footer-img">
       <a href="https://facebook.com" target="_blank">
         <span aria-hidden="true" class="fa-brands fa-facebook"></span>
-        <span class="sr-only"><img src="images/facebook_icon.png"></span>
+        <span class="sr-only"><img src="facebook_icon.png"></span>
       </a>
     </li>
     <li class="footer-img">
       <a href="https://twitter.com" target="_blank">
         <span aria-hidden="true" class="fa-brands fa-twitter"></span>
-        <span class="sr-only"><img src="images/twitter_icon.png"></span>
+        <span class="sr-only"><img src="twitter_icon.png"></span>
       </a>
     </li>
     <li class="footer-img">
       <a href="https://instagram.com" target="_blank">
         <span aria-hidden="true" class="fa-brands fa-instagram"></span>
-        <span class="sr-only"><img src="images/instagram_icon.png"></span>
+        <span class="sr-only"><img src="instagram_icon.png"></span>
       </a>
     </li>
   </ul>
