--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <nav>
   <div class="flex-container">
     <ul>
-      <li class="logo"><a href="/workspaces/module10grc/index.html"><img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
-      <li><a href="/workspaces/module10grc/about.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer"></span>About</a></li>
-      <li><a href="/workspaces/module10grc/products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved"></span>Products</a></li>
-      <li><a href="/workspaces/module10grc/contact.html"><span aria-hidden="true" class="fa-solid fa-phone"></span>Contact</a></li>
+      <li class="logo"><a href="https://github.com/mandi-guimont/module10grc/blob/main/index.html"><img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
+      <li><a href="https://github.com/mandi-guimont/module10grc/blob/main/about.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer"></span>About</a></li>
+      <li><a href="https://github.com/mandi-guimont/module10grc/blob/main/products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved"></span>Products</a></li>
+      <li><a href="https://github.com/mandi-guimont/module10grc/blob/main/contact.html"><span aria-hidden="true" class="fa-solid fa-phone"></span>Contact</a></li>
     </ul>
   </nav>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,8 +26,8 @@
 
     <p>Our coffee brightens your days—one sip at a time.
       Join us at our cafe, or order our beans online. Either way, you're bound to improve your day!</p>
-      <p>View our coffee:</p>
-     <a class="button" href="https://uxuicurriculum.wixsite.com/gulproast">Products</a>
+      <p>View our coffee</p>
+     <a class="button" href="https://github.com/mandi-guimont/module10grc/blob/main/products.html">Products</a>
     </article>
     
     <picture>
