--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
   <div class="flex-container">
     <ul>
       <li class="logo"><a href="https://mandi-guimont.github.io/module10grc/index.html"><img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
-      <li><a href="https://mandi-guimont.github.io/module10grc/about.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer"></span>About</a></li>
-      <li><a href="https://mandi-guimont.github.io/module10grc/products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved"></span>Products</a></li>
-      <li><a href="https://mandi-guimont.github.io/module10grc/contact.html"><span aria-hidden="true" class="fa-solid fa-phone"></span>Contact</a></li>
+      <li><a href="https://mandi-guimont.github.io/module10grc/about.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer">About</a></span></li>
+      <li><a href="https://mandi-guimont.github.io/module10grc/products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved">Products</a></span></li>
+      <li><a href="https://mandi-guimont.github.io/module10grc/contact.html"><span aria-hidden="true" class="fa-solid fa-phone">Contact</a></span></li>
     </ul>
   </nav>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
 
       <p>Life without coffee is a gloomy place. That’s why Gulp Roast has been proudly serving up fresh coffee to the <a href="https://goo.gl/maps/3rAyszfwSDx8Si2Y9">San Francisco area</a> since 2000. Our coffee is locally sourced with the most delicious blends coming directly to your home, right from coffee farmers near you. Our coffee makes even the most difficult days just a tad easier to get through.</p>
       <p>For us, this isn’t just brewing coffee. This is an active life mission to bring our customers the most flavorful, full-bodied beverages we can get our hands on. Browse our site to learn more about our locations and sourcing techniques.</p>
-     <a class="button" href="https://uxuicurriculum.wixsite.com/gulproast">Contact Us</a>
+     <a class="button" href="https://mandi-guimont.github.io/module10grc/contact.html">Contact Us</a>
     </article>
     
     <picture>
