--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="flex-container">
     <ul>
       <li class="logo"><a href="https://mandi-guimont.github.io/module10grc/index.html"><img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
-      <li><a href="https://mandi-guimont.github.io/module10grc/about.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer"></span>About</a></li>
-      <li><a href="https://mandi-guimont.github.io/module10grc/products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved"></span>Products</a></li>
-      <li><a href="https://mandi-guimont.github.io/module10grc/contact.html"><span aria-hidden="true" class="fa-solid fa-phone"></span>Contact</a></li>
+      <li><a href="https://mandi-guimont.github.io/module10grc/about.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer">About</a></span></li>
+      <li><a href="https://mandi-guimont.github.io/module10grc/products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved">Products</a></span></li>
+      <li><a href="https://mandi-guimont.github.io/module10grc/contact.html"><span aria-hidden="true" class="fa-solid fa-phone">Contact</a></span></li>
     </ul>
   </nav>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
